# garden

./: .gitignore  README.md  config.py  garden.toml  main.py  pipeline.py  pyproject.toml  sources.toml
avatars/: schema.py  session.py  threading.py
curator/: curator.py
db/: connection.py  models.py  queries.py  schema.sql
ingest/: extractor.py  fetcher.py  sources.py
llm/: client.py  parsing.py  prompts.py
ranking/: hot_rank.py
scheduler/: jobs.py
web/: app.py  broadcaster.py  templating.py
web/routes/: actions.py  admin.py  board.py  events.py  feed.py  inbox.py  profile.py  saved.py  sidebar.py
web/static/: style.css
web/templates/: base.html  board.html  feed.html  inbox.html  post.html  saved.html
web/templates/admin/: archetype_detail.html  archetype_form.html  archetype_import.html  dashboard.html  sources.html
web/templates/partials/: activity.html  comment.html  comment_body.html  comment_fragment.html  comment_vote.html  hot_comments.html  relationships.html  star_btn.html  vote_col.html
web/templates/profile/: avatar.html  avatar_edit.html  you.html
