[project]
name = "garden"
version = "0.1.0"
requires-python = ">=3.12"
dependencies = [
    "fastapi>=0.115",
    "uvicorn[standard]>=0.30",
    "jinja2>=3.1",
    "sse-starlette>=2.1",
    "aiosqlite>=0.20",
    "pydantic>=2.7",
    "pydantic-settings[toml]>=2.3",
    "feedparser>=6.0",
    "httpx>=0.27",
    "trafilatura>=1.12",
    "apscheduler>=3.10",
    "python-multipart>=0.0.9",
]

[dependency-groups]
dev = [
    "ruff>=0.4",
    "pyright>=1.1",
    "pytest>=8.2",
    "pytest-asyncio>=0.23",
]

[tool.ruff]
target-version = "py312"
line-length = 100

[tool.ruff.lint]
select = ["E", "F", "I", "UP"]

[tool.pyright]
pythonVersion = "3.12"
typeCheckingMode = "standard"

[tool.pytest.ini_options]
asyncio_mode = "auto"
